--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -11,6 +11,7 @@
                             { "level",  Model.Level},
                             { "levelcode", Model.LevelCode },
                             { "subgroupcode", Model.SubGroupCode },
+                            { "userpath", "CCGMember" },
 
                            };
     var paramdataprevious = new Dictionary<string, string>
