--- a/Admin/Pages/Positions/Delete.cshtml
+++ b/Admin/Pages/Positions/Delete.cshtml
@@ -26,7 +26,20 @@
             @Html.DisplayFor(model => model.JobPosition.TitleFre)
         </dd>
     </dl>
-
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.JobPosition.PositionDescEng)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.JobPosition.PositionDescEng)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.JobPosition.PositionDescFre)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.JobPosition.PositionDescFre)
+        </dd>
+    </dl>
     <form method="post">
         <input type="hidden" asp-for="JobPosition.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
