--- a/Web/Pages/Candidate/Index.cshtml
+++ b/Web/Pages/Candidate/Index.cshtml
@@ -4,35 +4,51 @@
     ViewData["Title"] = Localizer["title"];
 }
 
-<section role="contentinfo">
-    <nav role="navigation">
-        <h2 class="wb-inv">Document navigation</h2>
-        <ul class="pager">
-            <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-        </ul>
-    </nav>
+    <section role="contentinfo">
+        <nav role="navigation">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
 
-    <h2>@Localizer["Question1"]</h2>
-    <div class="row">
-        <div class="col-sm-6">
+        <h2>@Localizer["Question1"]</h2>
+        <div class="row">
+            <div class="col-sm-6">
+                <figure>
+                    <a class="nav-link" asp-page="Shoreside/AllCandidateShoreside">
+                        <img src="~/img/Candidate/shoreside.jpg" alt="@Localizer["PhotoShoreside"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Shoreside/AllCandidateShoreside">@Localizer["Shoreside"]</a></h4></figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-6">
+                <figure>
+                    <a class="nav-link" asp-page="Seagoing/Index">
+                        <img src="~/img/Candidate/Seagoing.jpg" alt="@Localizer["PhotoSeagoing"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Seagoing/Index">@Localizer["Seagoing"]</a></h4></figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <!-- <div style="clear:both;">
+                <div class="col-sm-6">
             <figure>
-                <a class="nav-link" asp-page="Shoreside/AllCandidateShoreside">
+                <a class="nav-link" asp-page="Seagoing" asp-route-hlid="2">
                     <img src="~/img/Candidate/shoreside.jpg" alt="@Localizer["PhotoShoreside"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Shoreside/AllCandidateShoreside">@Localizer["Shoreside"]</a></h4></figcaption>
+                <figcaption><h4 class="text-center"><a style="text-decoration:none">@Localizer["Shoreside"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-sm-6">
             <figure>
-                <a class="nav-link" asp-page="Seagoing/Index">
+                <a class="nav-link" asp-page="Shoreside" asp-route-hlid="1">
                     <img src="~/img/Candidate/Seagoing.jpg" alt="@Localizer["PhotoSeagoing"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Seagoing/Index">@Localizer["Seagoing"]</a></h4></figcaption>
+                <figcaption><h4 class="text-center"><a style="text-decoration:none">@Localizer["Seagoing"]</a></h4></figcaption>
             </figure>
         </div>
-    </div>
-
-    <!-- <div style="clear:both;">
           <div class="col-lg-12">
               <nav role="navigation">
                   <h2 class="wb-inv">Document navigation</h2>
@@ -43,4 +59,4 @@
           </div>
       </div>
     -->
-</section>
+    </section>
